samples/_failures_safe/1761128491_8500aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1487235a.c: In function ‘main’:
./samples/SAFE/__tmp_1487235a.c:173:5: error: expected expression at end of input
  173 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_1487235a.c:173:5: error: expected declaration or statement at end of input
